--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Set environment variable
         run: |
           echo "BUILD_KERNEL_VERSION=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
+          calculatedSha=$(git rev-parse --short ${{ github.sha }})
+          echo "COMMIT_SHA=$calculatedSha" >> $GITHUB_ENV
           
       - name: Building Kernel
         run: |
@@ -41,7 +43,7 @@ jobs:
       - name: Upload kernel
         uses: actions/upload-artifact@v4
         with:
-          name: "oItsMineZKernel-OneUI4-${{ env.BUILD_KERNEL_VERSION }}-Note10-${{ matrix.device }}-KSU-NEXT+SuSFS"
+          name: "oItsMineZKernel-OneUI4-${{ env.BUILD_KERNEL_VERSION }}-${{ matrix.device }}-${{ env.COMMIT_SHA }}-KSU-NEXT+SuSFS"
           path: |
             build/export/*.zip
 
