defconfig: disable suspend frequency

--- a/arch/arm64/configs/oitsminez.config
+++ b/arch/arm64/configs/oitsminez.config
@@ -62,5 +62,8 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 # Enable power efficient workqueues
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
+# Disable suspend frequency
+# CONFIG_CPU_FREQ_SUSPEND is not set
+
 # EOF
 
