--- a/arch/arm64/configs/oitsminez.config
+++ b/arch/arm64/configs/oitsminez.config
@@ -31,6 +31,9 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_CUBIC=y
+CONFIG_TCP_CONG_BBR2=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_CRYPTO_LZ4=y
@@ -62,8 +65,138 @@ CONFIG_BOEFFLA_WL_BLOCKER=y
 # Enable power efficient workqueues
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
+# BATTERY SAVER
+CONFIG_BATTERY_SAVER=y
+
+# KAIR (needed for use fb_legacy in schedutil)
+CONFIG_KAIR=y
+CONFIG_SCHED_KAIR_GLUE=y
+
+# GPU CUSTOM VOLTAGE REGULATOR
+# CONFIG_GPU_REG_VOLTAGE is not set
+
+# MREMAP - use PMD level - 20x faster for large files
+CONFIG_HAVE_MOVE_PMD=y
+
 # Disable suspend frequency
 # CONFIG_CPU_FREQ_SUSPEND is not set
+
+# State Notifier
+# CONFIG_STATE_NOTIFIER is not set
+
+# Enable power suspend
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
+
+# Morosound
+CONFIG_MORO_SOUND=y
+
+# Enable VDSO
+CONFIG_COMPAT_VDSO=y
+
+# CFS_BANDWITH - can makes too much cpu's thrrottling
+# CONFIG_CFS_BANDWIDTH is not set
+
+# VM MAX READAHEAD
+CONFIG_VM_MAX_READAHEAD=128
+CONFIG_VMSTAT_INTERVAL=15
+
+# Enable USB Serial
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+
+# Enable natively support nodemcu/arduino serial console
+CONFIG_USB_SERIAL_CP210X=y
+
+# ZRAM config
+CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY=y
+CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
+CONFIG_FIX_INACTIVE_RATIO=y
+
+# Disable FIPS
+# CONFIG_EXYRNG_FIPS_COMPLIANCE is not set
+# CONFIG_EXYRNG_FAIL_POLICY_RESET is not set
+# CONFIG_FIPS_FMP is not set
+
+# CIFS config
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_CIFS=y
+CONFIG_CIFS_STATS=y
+CONFIG_CIFS_ALLOW_INSECURE_LEGACY=y
+# CONFIG_CIFS_WEAK_PW_HASH is not set
+# CONFIG_CIFS_UPCALL is not set
+CONFIG_CIFS_XATTR=y
+CONFIG_CIFS_POSIX=y
+CONFIG_CIFS_ACL=y
+# CONFIG_CIFS_DEBUG is not set
+# CONFIG_CIFS_DEBUG2 is not set
+# CONFIG_CIFS_DEBUG_DUMP_KEYS is not set
+# CONFIG_CIFS_DFS_UPCALL is not set
+# CONFIG_CIFS_SMB311 is not set
+CONFIG_CRYPTO_CCM=y
+CONFIG_CRYPTO_MD4=y
+
+# Thermal settings
+CONFIG_THERMAL=y
+CONFIG_EXYNOS_THERMAL=y
+CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
+CONFIG_THERMAL_HWMON=y
+CONFIG_THERMAL_OF=y
+CONFIG_THERMAL_WRITABLE_TRIPS=y
+CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
+# CONFIG_THERMAL_DEFAULT_GOV_FAIR_SHARE is not set
+# CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
+# CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
+CONFIG_THERMAL_GOV_FAIR_SHARE=y
+CONFIG_THERMAL_GOV_STEP_WISE=y
+CONFIG_THERMAL_GOV_BANG_BANG=y
+# CONFIG_THERMAL_GOV_USER_SPACE is not set
+CONFIG_THERMAL_GOV_POWER_ALLOCATOR=y
+CONFIG_CPU_THERMAL=y
+# CONFIG_CLOCK_THERMAL is not set
+# CONFIG_DEVFREQ_THERMAL is not set
+CONFIG_GPU_THERMAL=y
+CONFIG_ISP_THERMAL=y
+CONFIG_THERMAL_EMULATION=y
+# CONFIG_QORIQ_THERMAL is not set
+
+# DEVFREQ governors
+# CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND is not set
+# CONFIG_DEVFREQ_GOV_SIMPLE_USAGE is not set
+# CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS is not set
+CONFIG_DEVFREQ_GOV_SIMPLE_INTERACTIVE=y
+# CONFIG_DEVFREQ_GOV_PERFORMANCE is not set
+# CONFIG_DEVFREQ_GOV_POWERSAVE is not set
+# CONFIG_DEVFREQ_GOV_USERSPACE is not set
+# CONFIG_DEVFREQ_GOV_PASSIVE is not set
+CONFIG_EXYNOS_ALT_DVFS=y
+
+# Disable kernel debug features
+# CONFIG_CGROUP_DEBUG is not set
+# CONFIG_SLUB_DEBUG is not set
+# CONFIG_BLOCK_SUPPORT_STLOG is not set
+# CONFIG_CMA_DEBUGFS is not set
+# CONFIG_PM_DEBUG is not set
+# CONFIG_PM_SLEEP_DEBUG is not set
+# CONFIG_MCPS_DEBUG is not set
+# CONFIG_TOUCHSCREEN_DUMP_MODE is not set
+# CONFIG_MMC_DW_DEBUG is not set
+# CONFIG_SAMSUNG_LMKD_DEBUG is not set
+# CONFIG_ION_DEBUG_EVENT_RECORD is not set
+# CONFIG_CMUCAL_DEBUG is not set
+# CONFIG_EXYNOS_DEBUG_TEST is not set
+# CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG is not set
+# CONFIG_PHY_EXYNOS_DEBUGFS is not set
+# CONFIG_PHY_EXYNOS_DP_DEBUGFS is not set
+# CONFIG_HAVE_DEBUG_KMEMLEAK is not set
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_DEBUG_ATOMIC_SLEEP is not set
+
+# ZSMALLOG mapping
+# CONFIG_PGTABLE_MAPPING is not set
+
+# STORAGE LOGS
+# CONFIG_BLOCK_SUPPORT_STLOG is not set
 
 # EOF
 
