defconfig: bump version to 1.1

--- a/arch/arm64/configs/oitsminez.config
+++ b/arch/arm64/configs/oitsminez.config
@@ -3,7 +3,7 @@
 # Kernel defconfigs are left stock with minimal edits while this file includes all of the major modifications done to the kernel config
 
 # Set custom kernel version
-CONFIG_LOCALVERSION="-oItsMineZKernel-OneUI4-v1-S10"
+CONFIG_LOCALVERSION="-oItsMineZKernel-OneUI4-v1.1-S10"
 # CONFIG_LOCALVERSION_AUTO is not set
 
 # Enable OverlayFS
