--- a/arch/arm64/configs/exynos9825.config
+++ b/arch/arm64/configs/exynos9825.config
@@ -1,6 +1,6 @@
 # Kernel string for Note10 Series
 
-CONFIG_LOCALVERSION="-oItsMineZKernel-OneUI4-v1-Note10"
+CONFIG_LOCALVERSION="-oItsMineZKernel-OneUI4-v1.1-Note10"
 
 # EOF
 
