--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Build and Release
 
 on:
   workflow_dispatch:
-    inputs:      
+    inputs:
       tag:
         description: 'Release Tag'
-        required: true        
+        required: true
 
 jobs:
   build:
@@ -17,20 +17,20 @@ jobs:
         device: [beyond0lte, beyond1lte, beyond2lte, beyondx, d1, d1x, d2s, d2x]
 
     steps:
-      - name: Checkout tree
+      - name: Checkout Tree
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
           submodules: true
 
-      - name: Set up build environment
+      - name: Setup Build Environment
         run: |
           sudo apt update -y
           sudo apt install libncurses5-dev -y
           sudo apt-get update --fix-missing && sudo apt-get install bc bison build-essential zstd clang flex gnupg gperf ccache liblz4-tool libsdl1.2-dev libstdc++6 libxml2 libxml2-utils lzop pngcrush schedtool squashfs-tools xsltproc zlib1g-dev libncurses5-dev bzip2 git gcc g++ libssl-dev openssl -y && sudo apt-get install gcc-aarch64-linux-gnu -y && sudo apt-get install gcc-arm-linux-gnueabihf -y && sudo apt-get install lld gcc-arm-linux-gnueabi llvm clang-14 clang-13 clang-12 clang-11 python2 python-is-python3 device-tree-compiler cpio -y
           wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb && sudo dpkg -i libtinfo5_6.3-2ubuntu0.1_amd64.deb
           
-      - name: Set environment variable
+      - name: Set Environment Variable
         run: |
           echo "BUILD_KERNEL_VERSION=${{ github.event.inputs.tag }}" >> $GITHUB_ENV
           calculatedSha=$(git rev-parse --short ${{ github.sha }})
@@ -40,10 +40,10 @@ jobs:
         run: |
             bash build.sh -m ${{ matrix.device }} -k y
 
-      - name: Upload kernel
+      - name: Upload Kernel
         uses: actions/upload-artifact@v4
         with:
-          name: "oItsMineZKernel-OneUI4-${{ env.BUILD_KERNEL_VERSION }}-${{ matrix.device }}-${{ env.COMMIT_SHA }}-KSU-NEXT+SuSFS"
+          name: "oItsMineZKernel-OneUI4-${{ env.BUILD_KERNEL_VERSION }}-${{ matrix.device }}-KSU-NEXT+SuSFS-${{ env.COMMIT_SHA }}"
           path: |
             build/export/*.zip
 
@@ -54,12 +54,12 @@ jobs:
       contents: write
 
     steps:
-      - name: Download all artifacts
+      - name: Download All Artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Create release
+      - name: Release Build Kernel
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ github.event.inputs.tag }}
